# ta-workflow

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
config/: .gitignore  config.yaml  example_config.yaml
src/ta_workflow/: __init__.py  __main__.py  cli.py  config_parser.py  distribute_assignments.py  distribute_homeworks.py  grades_to_excel.py  make_project_dir.py  path.py  pdf_splitter.py  send_grades.py  student.py  summarize.py  utils.py
tests/: conftest.py  utils_test.py
