[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.2",
]
workflow = [
    "pre-commit>=3.2.1",
    "pdm>=2.4.9",
]

[project]
name = "ta-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "oedokumaci", email = "oral.ersoy.dokumaci@gmail.com"},
]
dependencies = [
    "typer>=0.7.0",
    "pyyaml>=6.0",
    "pydantic>=1.10.7",
    "pandas>=2.0.0",
    "openpyxl>=3.1.2",
    "unidecode>=1.3.6",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
