[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]
workflow = [
    "pre-commit>=3.3.1",
    "mypy>=1.2.0",
    "types-PyYAML>=6.0.12.9",
]

[project]
name = "ta-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "oedokumaci", email = "oral.ersoy.dokumaci@gmail.com"},
]
dependencies = [
    "pdm>=2.5.3",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=1.10.7",
    "openpyxl>=3.1.2",
    "unidecode>=1.3.6",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
    "pandas==1.5.3",
    "PyPDF2>=3.0.1",
    "xlwt>=1.3.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
